components/uic_attribute_store/include/attribute_store.h

#define ATTRIBUTE_STORE_INVALID_ATTRIBUTE_TYPE \
  ((attribute_store_type_t)0x0000)  ///< This represents an invalid attribute Type. Shall not be used for nodes in the attribute store.
typedef uint32_t attribute_store_type_t;
/**
 * @defgroup attribute_store Attribute Store
 * @ingroup unify_components
 * @brief Attribute store.
 *
 * The Attribute store is a tree of attributes stored to save the state
 * of an object in the current network/environment.
 *
 * The attribute store is a directed acyclic graph, where there is
 * a root node under which all other nodes will have 1 parent and
 * a number of children.
 *
 * A tree node is identified by an @ref attribute_store_node_t handle
 * Each node has a type, defined by its @ref attribute_store_type_t type.
 *
 * This indicates what the value represents.
 * There are no restrictions regarding which node (type) is a parent or
 * a child.
 *
 * Each node has one or more value states, defined by
 * @ref attribute_store_node_value_state_t.
 * Each value state (REPORTED/DESIRED) contains a value of
 * variable length that can be read and written.
 * Nodes created have, by default, unassigned values in each of their
 * value state. In this case, the value length is set to 0.
 *
 * Finally, an example of attribute store tree organization is shown
 * in the image below.
 * Some Attribute IDs are color-coded for readability
 * and they do not represent any difference between nodes apart from
 * their attribute type value.
 * \image html attribute_store_example_representation.png "Attribute store tree example"
 *
 */

/**
 * @defgroup attribute_store_api Attribute Store Public Interface
 * @ingroup attribute_store
 * @brief Public functions from the attribute store.
 * It allows other components to manipulate the @ref attribute_store tree.
 * and register callbacks for @ref attribute_store updates.
 *
 * @{
 */

/**
 * @brief Handle to identify attribute store nodes
 */
//typedef void *attribute_store_node_t;
typedef datastore_attribute_id_t attribute_store_node_t;
/// Maximum length for a value associated to an attribute
#define ATTRIBUTE_STORE_MAXIMUM_VALUE_LENGTH DATASTORE_ATTRIBUTE_VALUE_SIZE
/// Special attribute_store_node_t value indicating that it does not exist.
#define ATTRIBUTE_STORE_INVALID_NODE (attribute_store_node_t)0
/**
 * @brief Attribute Store type to indicate the modification type
 * that triggered a callback
 */
typedef enum {
  ATTRIBUTE_CREATED,
  ATTRIBUTE_UPDATED,
  ATTRIBUTE_DELETED,
} attribute_store_change_t;
/**
 * @brief This is the value state of a value.
 */
typedef enum {
  REPORTED_ATTRIBUTE,  ///< This is the value reported by the node or actual value.
  DESIRED_ATTRIBUTE,  ///< This is the value to be applied to the node.
  DESIRED_OR_REPORTED_ATTRIBUTE,  ///< Retrieve the desired value if it exists if not then provide the reported attribute only used for readding.
} attribute_store_node_value_state_t;
/**
 * @brief structure that contains information about the current state
 * of a given node in the attribute store.
 */
typedef struct attribute_changed_event {
  attribute_store_node_t updated_node;
  attribute_store_type_t type;
  attribute_store_node_value_state_t value_state;
  attribute_store_change_t change;
} attribute_changed_event_t;
/**
 * @brief Attribute store callback type for tree node updates
 */
typedef void (*attribute_store_node_update_callback_t)(
  attribute_changed_event_t *event_data);
/**
 * @brief Retrieve the root node of the tree.
 *
 * @returns ATTRIBUTE_STORE_INVALID_NODE If the tree is not initialized, or
 *                                  there is no root node
 * @returns attribute_store_node_t  handle for the root node
 */
attribute_store_node_t attribute_store_get_root();
/**
 * @brief Add a new node in the current attribute store.
 *
 * @param type        The type to assign to the new node.
 *                    MUST be different than ATTRIBUTE_STORE_INVALID_ATTRIBUTE_TYPE
 * @param parent_node Parent node for the node to add.
 *
 * @returns attribute_store_node_t handle for the newly created node
 * @returns ATTRIBUTE_STORE_INVALID_NODE in case of error
 */
attribute_store_node_t
  attribute_store_add_node(attribute_store_type_t type,
                           attribute_store_node_t parent_node);
/**
 * @brief Delete a node and all its children from the attribute store.
 *
 * @param node The identifier of the node to delete.
 * @note The root node cannot be deleted. If passed as argument,
 *        only its children will be deleted.
 * @returns SL_STATUS_OK if the node and its children were deleted successfully
 *          or if it was not in the attribute store anyway
 * @returns SL_STATUS_FAIL if an error happened.
 * @returns SL_STATUS_NOT_INITIALIZED if the attribute store is not initialized
 */
sl_status_t attribute_store_delete_node(attribute_store_node_t node);
/**
 * @brief Get the node handle of the parent of a node.
 *
 * @param node         The tree handle of the node for which
 *                     the parent identifier will be returned
 * @returns ATTRIBUTE_STORE_INVALID_NODE If the node has no parent or does not exist.
 * @returns attribute_store_node_t       handle for the parent node on success
 */
attribute_store_node_t
  attribute_store_get_node_parent(attribute_store_node_t node);
/**
 * @brief Traverse up the tree from a node and finds the first parent with a given type.
 *
 * @param node              The Attribute Store node for which the parents
 *                          will be searched for the given type
 * @param parent_type       The type of the parent that we search
 *
 * @returns ATTRIBUTE_STORE_INVALID_NODE If the node has no (distant) parent with the given type.
 * @returns attribute_store_node_t       handle for the parent node on success
 */
attribute_store_node_t attribute_store_get_first_parent_with_type(
  attribute_store_node_t node, attribute_store_type_t parent_type);
/**
 * @brief Set the attribute value of a node in the current attribute store tree.
 *
 * @param node        The node handle for which the value
 *                    must be updated.
 * @param value_state The attribute_store_node_value_state_t
 *                    value state to write for the node.
 *                    (Desired or Reported)
 * @param value       A uint8_t pointer to an array containing
 *                    the data to be written for the node. This array
 *                    may contain up to 255 bytes.
 * @param value_size  The number of bytes to read from the value pointer.
 *
 * @returns SL_STATUS_OK         If the tree node value has been set correctly.
 * @returns SL_STATUS_FAIL       If the value state is not understood.
 * @returns SL_STATUS_NOT_INITIALIZED if the attribute store is not initialized
 *                                    properly
 */
sl_status_t attribute_store_set_node_attribute_value(
  attribute_store_node_t node,
  attribute_store_node_value_state_t value_state,
  const uint8_t *value,
  uint8_t value_size);
/**
 * @brief Get the attribute value of a node.
 *
 * @param node        The node handle of the node for which
 *                    attribute value is to be retrieved
 * @param value_state The attribute_store_node_value_state_t
 *                    value state to retrieve from the node.
 *                    (Desired or Reported)
 * @param value       A uint8_t pointer to an array for which the
 *                    value/value state will be written to. This array
 *                    should be able to contain 255 bytes.
 * @param value_size  Pointer to an uint8_t variable where the size
 *                    of the value/payload written to the value pointer
 *                    will be written.
 *
 * @returns SL_STATUS_OK        If the attribute value of the node was successfully
 *                              written to the pointers value/value_size
 * @returns SL_STATUS_FAIL      If an error occurred
 * @returns SL_STATUS_NOT_INITIALIZED if the attribute store is not initialized
 *                                    properly
 */
sl_status_t attribute_store_get_node_attribute_value(
  attribute_store_node_t node,
  attribute_store_node_value_state_t value_state,
  uint8_t *value,
  uint8_t *value_size);
/**
 * @brief Get the type of a node.
 *
 * @param node The node handle of the node for which
 *             the type is to be returned
 * @returns attribute_store_type_t The assigned type for the node
 * @returns ATTRIBUTE_STORE_INVALID_ATTRIBUTE_TYPE if the node does not exist
 */
attribute_store_type_t
  attribute_store_get_node_type(attribute_store_node_t node);
/**
 * @brief Get the node handle of a child of a node.
 *
 * @param node        The tree handle of the node for which
 *                    the child handle will be returned
 * @param child_index Value to indicate which child to find.
 *                    0 will match the first child,
 *                    1 the second child, etc.
 * @returns attribute_store_node_t handle for the child node
 *                                 at the indicated index.
 * @returns ATTRIBUTE_STORE_INVALID_NODE If the child index does not exist
 *          (i.e. there are less children than the child index).
 *          or if node itself does not exist
 */
attribute_store_node_t
  attribute_store_get_node_child(attribute_store_node_t node,
                                 uint32_t child_index);
/**
 * @brief Get the number of children of the given node.
 *
 * @param node        The tree handle of the node for which
 *                    the child handle will be returned
 * @returns int       Number of children
 */
size_t attribute_store_get_node_child_count(attribute_store_node_t node);
/**
 * @brief Get the node handle of a child of a node with a certain type.
 *
 * @param node          The node handle of the node for which
 *                      the child identifier will be written
 * @param child_type    The attribute store type of the child.
 * @param child_index   Value to indicate which child to find.
 *                      0 will match the first child (with that type),
 *                      1 the second child (with that type), etc.
 * @returns attribute_store_node_t handle for the child node at the indicated index
 *                                 with the type.
 * @returns ATTRIBUTE_STORE_INVALID_NODE if the child index does not exist.
 *               (i.e. there are less children with that type than the child index).
 *               or if node itself does not exist
 */
attribute_store_node_t
  attribute_store_get_node_child_by_type(attribute_store_node_t node,
                                         attribute_store_type_t child_type,
                                         uint32_t child_index);