components/uic_attribute_store/include/attribute_store_helper.h

/**
 * @brief Visit all nodes in the tree.
 *
 * This function visits all tree nodes going from the top and down.
 * It will continue to the node children if the status returned by
 * the function is SL_STATUS_OK. If the function returns SL_STATUS_ABORT,
 * no more nodes are visited. Otherwise, siblings will be visited.
 *
 * @param top First node to be visited
 * @param func function to execute
 * @param depth The current depth of the top node.
 */
sl_status_t
  attribute_store_walk_tree(attribute_store_node_t top,
                            sl_status_t (*func)(attribute_store_node_t, int),
                            int depth);