components/uic_rust/uic_attribute_store_rs/src/uic_attribute_store_bindings.rs

/* automatically generated by rust-bindgen 0.59.1 */

pub const ATTRIBUTE_STORE_MAXIMUM_VALUE_LENGTH: u32 = 255;
pub const CLOCK_SECOND: u32 = 1000;
pub type sl_status_t = u32;
pub type datastore_attribute_id_t = u32;
pub type size_t = ::std::os::raw::c_ulong;
pub type attribute_store_type_t = u32;
pub type attribute_store_node_t = datastore_attribute_id_t;
#[repr(u32)]
#[doc = " @brief Attribute Store type to indicate the modification type"]
#[doc = " that triggered a callback"]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum attribute_store_change_t {
    ATTRIBUTE_CREATED = 0,
    ATTRIBUTE_UPDATED = 1,
    ATTRIBUTE_DELETED = 2,
}
#[doc = " @brief Attribute store callback type for tree node updates"]
pub type attribute_store_node_update_callback_t = ::std::option::Option<
    unsafe extern "C" fn(arg1: attribute_store_node_t, arg2: attribute_store_change_t),
>;
#[repr(u32)]
#[doc = " @brief This is the value state of a value."]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum attribute_store_node_value_state_t {
    #[doc = "< This is the value reported by the node or actual value."]
    REPORTED_ATTRIBUTE = 0,
    #[doc = "< This is the value to be applied to the node."]
    DESIRED_ATTRIBUTE = 1,
    #[doc = "< Retrieve the desired value if it exists if not then provide the reported attribute only used for readding."]
    DESIRED_OR_REPORTED_ATTRIBUTE = 2,
}
extern "C" {
    #[doc = " @brief Retrieve the root node of the tree."]
    #[doc = ""]
    #[doc = " @returns NULL                    If the tree is not initialized, or there is"]
    #[doc = "                                  no root node"]
    #[doc = " @returns attribute_store_node_t  handle for the root node"]
    pub fn attribute_store_get_root() -> attribute_store_node_t;
}
extern "C" {
    #[doc = " @brief Add a new node in the current attribute store."]
    #[doc = ""]
    #[doc = " @param type        The type to assign to the new node."]
    #[doc = "                    MUST be different than ATTRIBUTE_STORE_INVALID_ATTRIBUTE_TYPE"]
    #[doc = " @param parent_node Parent node for the node to add."]
    #[doc = ""]
    #[doc = " @returns attribute_store_node_t handle for the newly created node"]
    #[doc = " @returns ATTRIBUTE_STORE_INVALID_NODE in case of error"]
    pub fn attribute_store_add_node(
        type_: attribute_store_type_t,
        parent_node: attribute_store_node_t,
    ) -> attribute_store_node_t;
}
extern "C" {
    #[doc = " @brief Delete a node and all its children from the attribute store."]
    #[doc = ""]
    #[doc = " @param node The identifier of the node to delete."]
    #[doc = " @note The root node cannot be deleted. If passed as argument,"]
    #[doc = "        only its children will be deleted."]
    #[doc = " @returns SL_STATUS_OK if the node and its children were deleted successfully"]
    #[doc = "          or if it was not in the attribute store anyway"]
    #[doc = " @returns SL_STATUS_FAIL if an error happened."]
    #[doc = " @returns SL_STATUS_NOT_INITIALIZED if the attribute store is not initialized"]
    pub fn attribute_store_delete_node(node: attribute_store_node_t) -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Get the node handle of the parent of a node."]
    #[doc = ""]
    #[doc = " @param node         The tree handle of the node for which"]
    #[doc = "                     the parent identifier will be returned"]
    #[doc = " @returns ATTRIBUTE_STORE_INVALID_NODE If the node has no parent or does not exist."]
    #[doc = " @returns attribute_store_node_t       handle for the parent node on success"]
    pub fn attribute_store_get_node_parent(node: attribute_store_node_t) -> attribute_store_node_t;
}
extern "C" {
    #[doc = " @brief Traverse up the tree from a node and finds the first parent with a given type."]
    #[doc = ""]
    #[doc = " @param node              The Attribute Store node for which the parents"]
    #[doc = "                          will be searched for the given type"]
    #[doc = " @param parent_type       The type of the parent that we search"]
    #[doc = ""]
    #[doc = " @returns ATTRIBUTE_STORE_INVALID_NODE If the node has no (distant) parent with the given type."]
    #[doc = " @returns attribute_store_node_t       handle for the parent node on success"]
    pub fn attribute_store_get_first_parent_with_type(
        node: attribute_store_node_t,
        parent_type: attribute_store_type_t,
    ) -> attribute_store_node_t;
}
extern "C" {
    #[doc = " @brief Set the attribute value of a node in the current attribute store tree."]
    #[doc = ""]
    #[doc = " @param node        The node handle for which the value"]
    #[doc = "                    must be updated."]
    #[doc = " @param value_state The attribute_store_node_value_state_t"]
    #[doc = "                    value state to write for the node."]
    #[doc = "                    (Desired or Reported)"]
    #[doc = " @param value       A uint8_t pointer to an array containing"]
    #[doc = "                    the data to be written for the node. This array"]
    #[doc = "                    may contain up to 255 bytes."]
    #[doc = " @param value_size  The number of bytes to read from the value pointer."]
    #[doc = ""]
    #[doc = " @returns SL_STATUS_OK         If the tree node value has been set correctly."]
    #[doc = " @returns SL_STATUS_FAIL       If the value state is not understood."]
    #[doc = " @returns SL_STATUS_NOT_INITIALIZED if the attribute store is not initialized"]
    #[doc = "                                    properly"]
    pub fn attribute_store_set_node_attribute_value(
        node: attribute_store_node_t,
        value_state: attribute_store_node_value_state_t,
        value: *const u8,
        value_size: u8,
    ) -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Get the attribute value of a node."]
    #[doc = ""]
    #[doc = " @param node        The node handle of the node for which"]
    #[doc = "                    attribute value is to be retrieved"]
    #[doc = " @param value_state The attribute_store_node_value_state_t"]
    #[doc = "                    value state to retrieve from the node."]
    #[doc = "                    (Desired or Reported)"]
    #[doc = " @param value       A uint8_t pointer to an array for which the"]
    #[doc = "                    value/value state will be written to. This array"]
    #[doc = "                    should be able to contain 255 bytes."]
    #[doc = " @param value_size  Pointer to an uint8_t variable where the size"]
    #[doc = "                    of the value/payload written to the value pointer"]
    #[doc = "                    will be written."]
    #[doc = ""]
    #[doc = " @returns SL_STATUS_OK        If the attribute value of the node was successfully"]
    #[doc = "                              written to the pointers value/value_size"]
    #[doc = " @returns SL_STATUS_FAIL      If an error occurred"]
    #[doc = " @returns SL_STATUS_NOT_INITIALIZED if the attribute store is not initialized"]
    #[doc = "                                    properly"]
    pub fn attribute_store_get_node_attribute_value(
        node: attribute_store_node_t,
        value_state: attribute_store_node_value_state_t,
        value: *mut u8,
        value_size: *mut u8,
    ) -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Get the type of a node."]
    #[doc = ""]
    #[doc = " @param node The node handle of the node for which"]
    #[doc = "             the type is to be returned"]
    #[doc = " @returns attribute_store_type_t The assigned type for the node"]
    #[doc = " @returns ATTRIBUTE_STORE_INVALID_ATTRIBUTE_TYPE if the node does not exist"]
    pub fn attribute_store_get_node_type(node: attribute_store_node_t) -> attribute_store_type_t;
}
extern "C" {
    #[doc = " @brief Get the node handle of a child of a node."]
    #[doc = ""]
    #[doc = " @param node        The tree handle of the node for which"]
    #[doc = "                    the child handle will be returned"]
    #[doc = " @param child_index Value to indicate which child to find."]
    #[doc = "                    0 will match the first child,"]
    #[doc = "                    1 the second child, etc."]
    #[doc = " @returns attribute_store_node_t handle for the child node"]
    #[doc = "                                 at the indicated index."]
    #[doc = " @returns ATTRIBUTE_STORE_INVALID_NODE If the child index does not exist"]
    #[doc = "          (i.e. there are less children than the child index)."]
    #[doc = "          or if node itself does not exist"]
    pub fn attribute_store_get_node_child(
        node: attribute_store_node_t,
        child_index: u32,
    ) -> attribute_store_node_t;
}
extern "C" {
    #[doc = " @brief Get the number of children of the given node."]
    #[doc = ""]
    #[doc = " @param node        The tree handle of the node for which"]
    #[doc = "                    the child handle will be returned"]
    #[doc = " @returns int       Number of children"]
    pub fn attribute_store_get_node_child_count(node: attribute_store_node_t) -> size_t;
}
extern "C" {
    #[doc = " @brief Get the node handle of a child of a node with a certain type."]
    #[doc = ""]
    #[doc = " @param node          The node handle of the node for which"]
    #[doc = "                      the child identifier will be written"]
    #[doc = " @param child_type    The attribute store type of the child."]
    #[doc = " @param child_index   Value to indicate which child to find."]
    #[doc = "                      0 will match the first child (with that type),"]
    #[doc = "                      1 the second child (with that type), etc."]
    #[doc = " @returns attribute_store_node_t handle for the child node at the indicated index"]
    #[doc = "                                 with the type."]
    #[doc = " @returns ATTRIBUTE_STORE_INVALID_NODE if the child index does not exist."]
    #[doc = "               (i.e. there are less children with that type than the child index)."]
    #[doc = "               or if node itself does not exist"]
    pub fn attribute_store_get_node_child_by_type(
        node: attribute_store_node_t,
        child_type: attribute_store_type_t,
        child_index: u32,
    ) -> attribute_store_node_t;
}
